// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOpenAPI should show every endpoints when authenticated 1`] = `
Object {
  "response": Object {
    "body": Object {
      "info": Object {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "2.0",
      "paths": Object {
        "/time": Object {
          "get": Object {
            "tags": Array [
              "public",
            ],
            "x-whook": Object {
              "memx": 2,
              "tx": 18,
            },
          },
          "put": Object {
            "tags": Array [
              "private",
            ],
            "x-whook": Object {
              "private": true,
            },
          },
        },
      },
      "tags": Array [
        Object {
          "name": "public",
        },
        Object {
          "name": "private",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`getOpenAPI should work 1`] = `
Object {
  "response": Object {
    "body": Object {
      "info": Object {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "2.0",
      "paths": Object {
        "/time": Object {
          "get": Object {
            "tags": Array [
              "public",
            ],
            "x-whook": undefined,
          },
        },
      },
      "tags": Array [
        Object {
          "name": "public",
        },
        Object {
          "name": "private",
        },
      ],
    },
    "status": 200,
  },
}
`;
